--- a/templates/base.html
+++ b/templates/base.html
@@ -16,11 +16,12 @@
   <body>
     <nav>
     <div class="nav-wrapper white">
-      <a id="logo" href="#!" class="brand-logo blue-grey-text text-darken-1-text">Bill Gardner</a>
+      <a id="logo" href="#!" class="brand-logo blue-grey-text text-darken-1-text flow-text">Bill Gardner  |  <small>Backend Developer</small></a>
       <ul class="right hide-on-med-and-down">
         <li><a id="btn" class="waves-effect blue-grey darken-1 btn">About</a></li>
         <li><a id="btn" class="waves-effect blue-grey darken-1 btn">Portfolio</a></li>
         <li><a id="btn" class="waves-effect blue-grey darken-1 btn">Tools</a></li>
+        <li><a id="btn" class="waves-effect blue-grey darken-1 btn">Resume</a></li>
         <li><a id="btn" class="waves-effect blue-grey darken-1 btn">Contact</a></li>
       </ul>
     </div>
