Add All the Drop Shadows Bang

--- a/app/static/app/css/main.css
+++ b/app/static/app/css/main.css
@@ -66,3 +66,12 @@ h2 {
   width: 260px;
   margin-left: 20;
 }
+
+#resumebutton{
+  margin-left: 24px;
+  width: 465px;
+}
+
+#skillsbtn{
+  background-color: red;
+}
