--- a/templates/base.html
+++ b/templates/base.html
@@ -14,18 +14,29 @@
         <link rel="stylesheet" href="{% static "app/css/main.css" %}" media="screen" charset="utf-8">
   </head>
   <body>
-    <nav>
-    <div class="nav-wrapper white">
+<div class="navbar-fixed">
+  <nav>
+    <div class="nav-wrapper white z-depth-3">
       <a id="logo" href="#!" class="brand-logo blue-grey-text text-darken-1-text flow-text">Bill Gardner  |  <small>Backend Developer</small></a>
-      <ul class="right hide-on-med-and-down">
-        <li><a id="btn" class="waves-effect blue-grey darken-1 btn">About</a></li>
-        <li><a id="btn" class="waves-effect blue-grey darken-1 btn">Portfolio</a></li>
-        <li><a id="btn" class="waves-effect blue-grey darken-1 btn">Tools</a></li>
-        <li><a id="btn" class="waves-effect blue-grey darken-1 btn">Resume</a></li>
-        <li><a id="btn" class="waves-effect blue-grey darken-1 btn">Contact</a></li>
+      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+        <ul class="right hide-on-med-and-down">
+          <li><a id="btn" class="waves-effect blue-grey darken-1 btn z-depth-2" href="#about">About</a></li>
+          <li><a id="btn" class="waves-effect blue-grey darken-1 btn z-depth-2" href="#portfolio">Portfolio</a></li>
+          <li><a id="btn" class="waves-effect blue-grey darken-1 btn z-depth-2" href="#tools">Skills</a></li>
+          <li><a id="btn" class="waves-effect blue-grey darken-1 btn z-depth-2" href="#resume">Resume</a></li>
+          <li><a id="btn" class="waves-effect blue-grey darken-1 btn z-depth-2" href="#contact">Contact</a></li>
+        </ul>
+        <ul class="side-nav" id="mobile-demo">
+          <li><a id="btn" class="waves-effect blue-grey darken-1 btn" href="#about">About</a></li>
+          <li><a id="btn" class="waves-effect blue-grey darken-1 btn" href="#portfolio">Portfolio</a></li>
+          <li><a id="btn" class="waves-effect blue-grey darken-1 btn" href="#tools">Skills</a></li>
+          <li><a id="btn" class="waves-effect blue-grey darken-1 btn" href="#resume">Resume</a></li>
+          <li><a id="btn" class="waves-effect blue-grey darken-1 btn" href="#contact">Contact</a></li>
       </ul>
     </div>
   </nav>
+</div>
+
     {% block introcontent %}
       This is a place that no longer exists.
     {% endblock %}
