contact information and such

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
     </div>
       <div class="card-action">
         <a id="cardbutton" class="waves-effect waves-light btn modal-trigger" href="#modal1">More Information</a>
-        <a id="cardbutton" class="waves-effect waves-light btn modal-trigger" href="http://www.subasmbly.com" target="blank">Open Subasmbly.com</a>
+        <a id="cardbutton" class="waves-effect waves-light btn modal-trigger z-depth-2" href="http://www.subasmbly.com" target="blank">Open Subasmbly.com</a>
       </div>
     </div>
     <div id="cardsmall2" class="card medium card-panel hoverable z-depth-5">
@@ -48,7 +48,7 @@
     </div>
       <div class="card-action">
         <a id="cardbutton" class="waves-effect waves-light btn modal-trigger" href="#modal2">More Information</a>
-        <a id="cardbutton" class="waves-effect waves-light btn modal-trigger" href="http://www.billslist.com" target="blank">Open Bill's List</a>
+        <a id="cardbutton" class="waves-effect waves-light btn modal-trigger z-depth-2" href="https://billslist.herokuapp.com/" target="blank">Open Bill's List</a>
       </div>
     </div>
     <div id="cardsmall3" class="card medium card-panel hoverable z-depth-5">
@@ -60,7 +60,7 @@
     </div>
       <div class="card-action">
         <a id="cardbutton" class="waves-effect waves-light btn modal-trigger" href="#modal3">More Information</a>
-        <a id="cardbutton" class="waves-effect waves-light btn modal-trigger" href="http://www.subasmbly.com" target="blank">Open Bil.ly</a>
+        <a id="cardbutton" class="waves-effect waves-light btn modal-trigger z-depth-2" href="https://billdotly.herokuapp.com/" target="blank">Open bil dot ly</a>
       </div>
     </div>
   <br>
@@ -70,30 +70,37 @@
     <!-- Modal Structure -->
     <div id="modal1" class="modal">
       <div class="modal-content">
-        <h4>Modal Header</h4>
-        <p>A bunch of text</p>
+        <h4 class="flow-text">Subasmbly</h4>
+        <p class="flow-text">Subasmbly is a Bill of Materials application designed to put high quality revision control and customer and supplier management into the hand of Makers who previously only had Excel to execute their BoMs</p>
+        <p class="flow-text">Technologies used: Python, Django, Highton API Module, Heroku</p>
       </div>
       <div class="modal-footer">
+        <a id="cardbutton" class="waves-effect waves-light btn modal-trigger z-depth-2" href="http://www.subasmbly.com" target="blank">Open Subasmbly.com</a>
         <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
       </div>
     </div>
     <!-- Modal Structure -->
     <div id="modal2" class="modal">
       <div class="modal-content">
-        <h4>Modal Header</h4>
-        <p>A bunch of text</p>
+        <h4 class="flow-text">Subasmbly</h4>
+        <p class="flow-text">Bill's List is a Craig's List clone, written as part of the curriculum at The Iron Yard.  Users can make profiles, log in, and post new listings.</p>
+        <p class="flow-text">Bill's List also incorporates a REST API and RESTful urls.</p>
+        <p class="flow-text">Technologies used: Python, Django, Django REST Framework, Heroku</p>
       </div>
       <div class="modal-footer">
+        <a id="cardbutton" class="waves-effect waves-light btn modal-trigger z-depth-2" href="https://billslist.herokuapp.com/" target="blank">Open Bill's List</a>
         <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
       </div>
     </div>
     <!-- Modal Structure -->
     <div id="modal3" class="modal">
       <div class="modal-content">
-        <h4>Modal Header</h4>
-        <p>A bunch of text</p>
+        <h4 class="flow-text">Subasmbly</h4>
+        <p class="flow-text">Bil.ly is a url shortener, written as part of the curriculum at The Iron Yard.  Much like popular service Bit.ly, users can make profiles, log in, shorten urls, and save them to their profile.</p>
+        <p class="flow-text">Technologies used: Python, Django, HashIDs, Heroku</p>
       </div>
       <div class="modal-footer">
+        <a id="cardbutton" class="waves-effect waves-light btn modal-trigger z-depth-2" href="https://billdotly.herokuapp.com/" target="blank">Open Bil.ly</a>
         <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
       </div>
     </div>
@@ -153,6 +160,8 @@
   <div class="container">
     <br>
     <br>
+    <br>
+    <br>
     <h2 class="white-text">resume:</h2>
     <hr>
     <br>
@@ -163,38 +172,38 @@
         <div class="container">
           <table>
             <tr>
-              <td class="flow-text">Python</td>
-              <td class="flow-text">Django</td>
-              <td class="flow-text">HTML5</td>
-              <td class="flow-text">CSS3</td>
+              <td class="btn-flat disabled" width="175px">Python</td>
+              <td class="btn-flat disabled" width="175px">Django</td>
+              <td class="btn-flat disabled" width="175px">HTML5</td>
+              <td class="btn-flat disabled" width="175px">CSS3</td>
             </tr>
             <tr>
-              <td class="flow-text">Java</td>
-              <td class="flow-text">Heroku</td>
-              <td class="flow-text">Github</td>
-              <td class="flow-text"><small>PostgreSQL</small></td>
+              <td class="btn-flat disabled" width="175px">Java</td>
+              <td class="btn-flat disabled" width="175px">Heroku</td>
+              <td class="btn-flat disabled" width="175px">Github</td>
+              <td class="btn-flat disabled" width="175px">PostgreSQL</td>
             </tr>
             <tr>
-              <td class="flow-text">Bootstrap</td>
-              <td class="flow-text">Materialize</td>
-              <td class="flow-text">ZSH</td>
+              <td class="btn-flat disabled" width="175px">Bootstrap</td>
+              <td class="btn-flat disabled" width="175px">Materialize</td>
+              <td class="btn-flat disabled" width="175px">ZSH</td>
+              <td class="btn-flat disabled" width="175px">RESTful APIs</td>
             </tr>
             <tr>
-              <td class="flow-text">Photoshop</td>
-              <td class="flow-text">Illustrator</td>
-              <td class="flow-text">InDesign</td>
-              <td class="flow-text">Acrobat</td>
+              <td class="btn-flat disabled" width="175px">Photoshop</td>
+              <td class="btn-flat disabled" width="175px">Illustrator</td>
+              <td class="btn-flat disabled" width="175px">In Design</td>
+              <td class="btn-flat disabled" width="175px">Acrobat</td>
             </tr>
             <tr>
-              <td class="flow-text">Solidworks</td>
-              <td class="flow-text">Rhino3D</td>
-              <td class="flow-text">AutoCAD</td>
+              <td class="btn-flat disabled" width="175px">Solidworks</td>
+              <td class="btn-flat disabled" width="175px">Rhino3D</td>
+              <td class="btn-flat disabled" width="175px">AutoCAD</td>
+              <td class="btn-flat disabled" width="175px">Sketchup</td>
             </tr>
             <tr>
-              <td class="flow-text"><small>Object Oriented Programming</small></td>
-              <td class="flow-text"><small>Functional Programming</small></td>
-              <td class="flow-text"><small>RESTful APIs</small></td>
-              <td class="flow-text"><small>Google Sketchup</small></td>
+              <td class="btn-flat disabled" width="350px">Object Oriented Programming</td>
+              <td class="btn-flat disabled" width="350px">Functional Programming</td>
             </tr>
           </table>
         </div>
@@ -234,7 +243,6 @@
         </div>
       </div>
     </li>
-
     <li>
       <div class="collapsible-header flow-text"><i class="material-icons">work</i>Recent Experience</div>
       <div class="collapsible-body white">
@@ -251,6 +259,14 @@
   </ul>
     <a id="resumebutton" class="waves-effect waves-light btn-large z-depth-3" href="{% static 'app/images/gardner_resume.pdf' %}" target="blank">Click to View My Resume</a>
     <a id="resumebutton" class="waves-effect waves-light btn-large z-depth-3" href="{% static 'app/images/gardner_resume.pdf' %}" download>Click to Download My Resume in .pdf Formatting</a>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <br>
     <br>
     <br>
@@ -273,10 +289,8 @@
       <div class="card-stacked">
         <div class="card-content">
           <span class="card-title"></span>
-          <ul>
-            <li> Do I need some kind of personal statement here?</li>
-          </ul>
-        </div>
+            <p class="flow-text white-text"><small>I've spend the last 20 years designing and engineering mass transit vehicles and furniture.  While that may sound like a dichotomy, I've found that designing heavy equipment, chairs and tables, and web applications are largely similar and require many of the same skills. Please feel free to contact me at the links below!</small></p>
+            </div>
         <div class="card-action">
           <a href="mailto:bill@williamjgardner.com"><i class="fa fa-envelope-square fa-3x" aria-hidden="true"></i></a>
           <a href="http://www.github.com/williamjohngardner" target="blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
@@ -287,6 +301,9 @@
     </div>
   </div>
 </div>
+<br>
+<br>
+<br>
 <br>
 <br>
 </div>
