contact information and such

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 <div class="navbar-fixed">
   <nav>
     <div class="nav-wrapper white z-depth-3">
-      <a id="logo" href="#!" class="brand-logo blue-grey-text text-darken-1-text flow-text">Bill Gardner  |  <small>Backend Developer</small></a>
+      <a id="logo" href="/" class="brand-logo blue-grey-text text-darken-1-text flow-text">Bill Gardner  |  <small>Backend Developer</small></a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
           <li><a id="btn" class="waves-effect blue-grey darken-1 btn z-depth-2" href="#about">About</a></li>
