--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
     </div>
       <div class="card-action">
         <a id="cardbutton" class="waves-effect waves-light btn modal-trigger" href="#modal3">More Information</a>
-        <a id="cardbutton" class="waves-effect waves-light btn modal-trigger z-depth-2" href="https://billdotly.herokuapp.com/" target="blank">Open bil dot ly</a>
+        <a id="cardbutton" class="waves-effect waves-light btn modal-trigger z-depth-2" href="https://billdotly.herokuapp.com/" target="blank">Open bil.ly</a>
       </div>
     </div>
   <br>
