Still working on responsive css

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block introcontent %}
 <div id="about">
-  <img id="gears" src="{% static 'app/images/gears.jpg' %}" class="z-depth-3" alt="Bill Gardner"></img>
+  <img id="gears" src="{% static 'app/images/gears.jpg' %}" class="z-depth-3 hide-on-small-only" alt="Bill Gardner"></img>
 </div>
 {% endblock %}
 {% block about %}
