--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,13 @@
           <li><a id="btn" class="waves-effect blue-grey darken-1 btn z-depth-2 hide-on-med-and-down" href="#resume">Resume</a></li>
           <li><a id="btn" class="waves-effect blue-grey darken-1 btn z-depth-2 hide-on-med-and-down" href="#contact">Contact</a></li>
         </ul>
+        <ul class="side-nav" id="mobile-demo">
+          <li><a class="waves-effect blue-grey darken-1 btn" href="#about">About</a></li>
+          <li><a class="waves-effect blue-grey darken-1 btn" href="#portfolio">Portfolio</a></li>
+          <li><a class="waves-effect blue-grey darken-1 btn" href="#tools">Skills</a></li>
+          <li><a class="waves-effect blue-grey darken-1 btn" href="#resume">Resume</a></li>
+          <li><a class="waves-effect blue-grey darken-1 btn" href="#contact">Contact</a></li>
+        </ul>
     </div>
   </nav>
 </div>
